<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="app_name">Project2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="shareMessage">Something to cherish, enjoy!</string>
    <string name="shareTitle">An image for you</string>

    <string name="shareSubject">Share Subject</string>
    <string name="shareSubject_description">This is the subject of what you would like to share</string>
    <string name="shareText">Share Text</string>
    <string name="shareText_description">This is the text that you would like to share</string>
    <string name="renderingOptions">Rendering Options</string>
    <string name="customImg">Customizing Image</string>
    <string name="customImg_description">Customize the level of sketchiness and color saturation</string>
    <string name="sketchiness">Sketchiness</string>
    <string name="sketchiness_description">Set BW threshold, higher numbers correspond to less detail and a whiter image</string>
    <string name="saturation">Saturation</string>
    <string name="saturation_description">Set color saturation, higher numbers correspond to more colorful images</string>
    <string name="undo">Undo</string>
    <string name="sketchy">Sketchy</string>
    <string name="colorize">Colorize</string>
    <string name="share">Share</string>
    <string name="shareOptions">Share Options</string>

</resources>